<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SongWriter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="song_title_hint">Enter a title for the song.</string>
    <string name="song_title_label">Title: </string>
    <string name="song_created_label">Created: &#160;</string>
    <string name="songs_title">Song List</string>
    <string name="untitled_song">Untitled</string>
    <string name="date_picker_title">Date of crime</string>
    <string name="date_button">Date</string>
    <string name="time_button">Time</string>
    <string name="choose_title">Set Date or Time?</string>
    <string name="new_song">New Song</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">Record your mind.</string>
    <string name="delete_song">Delete Song</string>
    <string name="add_song">Add a new song</string>
    <string name="notes">Notes</string>
    <string name="recordings">Recordings</string>
    <string name="notes_title">Note List</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="note_title_label">Title: </string>
    <string name="note_title_hint">Enter a title for the note.</string>
    <string name="note_created_label">Created: &#160;</string>
    <string name="note_body_hint">Write your note here.</string>
    <string name="untitled_note">Untitled</string>
    <string name="new_note">New Note</string>
    <string name="play">Play</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="recordings_title">Recording List</string>
    <string name="untitled_recording">Untitled</string>
    <string name="delete_recording">Delete Recording</string>
    <string name="new_recording">New Recording</string>
    <string name="add_recording">Add Recording</string>
    <string name="recording_title_label">Title: </string>
    <string name="recording_title_hint">Enter a title for the recording.</string>
    <string name="recordings_radio">Recordings</string>
    <string name="notes_radio">Notes</string>
    <string name="add_note_message">No notes added to this song yet.</string>
    <string name="add_recording_message">No recordings added to this song yet.</string>
    <string name="play_not_allowed">Cannot playback while recording.</string>
    <string name="record_not_allowed">Cannot record while playing.</string>
    
    
    
    
</resources>
