<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:focusable="true" 
    android:focusableInTouchMode="true" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_title_label" />
        <EditText
            android:id="@+id/note_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.36"
            android:ems="10"
            android:hint="@string/note_title_hint" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/note_created_label" />
	    <TextView
	        android:id="@+id/note_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/note_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_body_hint">
	</EditText>
        
    

</LinearLayout>
